@@ -24,7 +24,7 @@ def add_editor(site):
         if 'TinyMCE' not in editors:
             editors.append('TinyMCE')
         site_props._updateProperty(attrname, editors)
-        
+
 def remove_editor(site):
     """ Remove TinyMCE from 'my preferences' """
     portal_props = getUtility(IPropertiesTool)
@@ -34,12 +34,12 @@ def remove_editor(site):
         editors=list(site_props.getProperty(attrname))
         editors=[x for x in editors if x != 'TinyMCE']
         site_props._updateProperty(attrname, editors)
-        
+
 def register_mimetype(context, mimetype):
     """ register a mimetype with the MIMETypes registry """
     if type(mimetype) != InstanceType:
         mimetype = mimetype()
-    mimetypes_registry = getUtility(IMimetypesRegistryTool) 
+    mimetypes_registry = getUtility(IMimetypesRegistryTool)
     mimetypes_registry.register(mimetype)
 
 def unregister_mimetype(context, mimetype):
@@ -48,15 +48,15 @@ def unregister_mimetype(context, mimetype):
         mimetype = mimetype()
     mimetypes_registry = getUtility(IMimetypesRegistryTool)
     mimetypes_registry.unregister(mimetype)
-    
+
 def register_transform(context, transform):
-    """ register a transform with the portal_transforms tool"""    
+    """ register a transform with the portal_transforms tool"""
     transform_tool = getUtility(IPortalTransformsTool)
     transform = transform()
     transform_tool.registerTransform(transform)
-    
+
 def unregister_transform(context, transform):
-    """ unregister a transform with the portal_transforms tool"""        
+    """ unregister a transform with the portal_transforms tool"""
     transform_tool = getUtility(IPortalTransformsTool)
     # XXX How to check if transform exists?
     if hasattr(transform_tool, transform):
@@ -66,7 +66,7 @@ def register_transform_policy(context, output_mimetype, required_transform):
     """ register a transform policy with the portal_transforms tool"""
     transform_tool = getUtility(IPortalTransformsTool)
     unregister_transform_policy(context, output_mimetype)
-    transform_tool.manage_addPolicy(output_mimetype, [required_transform])    
+    transform_tool.manage_addPolicy(output_mimetype, [required_transform])
 
 def unregister_transform_policy(context, output_mimetype):
     """ unregister a transform policy with the portal_transforms tool"""
@@ -82,7 +82,7 @@ def install_mimetype_and_transforms(context):
     register_transform(context, tinymce_output_html_to_html)
     register_transform(context, html_to_tinymce_output_html)
     register_transform_policy(context, "text/x-html-safe", "html_to_tinymce_output_html")
-    
+
 def uninstall_mimetype_and_transforms(context):
     """ unregister text/x-tinymce-output-html mimetype and transformations for captioned images """
     unregister_transform(context, "tinymce_output_html_to_html")
@@ -90,15 +90,27 @@ def uninstall_mimetype_and_transforms(context):
     unregister_mimetype(context, text_tinymce_output_html)
     unregister_transform_policy(context, "text/x-html-safe")
 
+def fix_styles_plone3(context):
+    portal_tinymce = getToolByName(context, 'portal_tinymce')
+    portal_migration = getToolByName(context, 'portal_migration')
+
+    use_tiny_mce_plone3_styles = False
+    if hasattr(portal_migration, 'getInstanceVersionTuple'):
+        major_version = portal_migration.getInstanceVersionTuple()[0]
+        if major_version == 3:
+            use_tiny_mce_plone3_styles = True
+    portal_tinymce.use_tiny_mce_plone3_styles = use_tiny_mce_plone3_styles
+
 def importVarious(context):
     if context.readDataFile('portal-tinymce.txt') is None:
         return
     site = context.getSite()
     add_editor(site)
-    
+    fix_styles_plone3(site)
+
 def unregisterUtility(context):
     my_utility = getUtility(ITinyMCE)
     context.getSiteManager().unregisterUtility(my_utility, ITinyMCE)
     del my_utility
-    
+
     transaction.commit()
